# ubj-flow

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  bswap.h  define.h  error_handling.h  type.h  ubjf.h  ubjf_error.h  ubjf_read.h  ubjf_type.h  ubjf_write.h
include/detail/: error_handling.h  token.h
src/: CMakeLists.txt  error.c  read_init.c  read_parser.c  ubjf_error.c  ubjf_read.c  ubjf_type.c
test/: CMakeLists.txt  main.c
ubjf/: CMakeLists.txt  read.h  ubjf.h  write.h
ubjf/detail/: bswap.h  config.h  define.h  emitter.c  emitter.h  error.c  error.h  error_handling.h  export.h  parser.c  parser.h  read_init.c  read_parser.c  token.h  type.h  value.h  write_emitter.c  write_init.c
ubjf/detail/emitter/: emitter.c  emitter.h  emitter_spec12.c
ubjf/detail/parser/: parser.c  parser.h  parser_spec12.c
ubjf/detail/spec12/: emitter_spec12.c  parser_spec12.c
